--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -11,6 +11,9 @@ vignette: >
 
 ```{r, include=FALSE}
 library(deepregression)
+packages_needed <- c("ggplot2", "reshape2", "MASS", "gamlss.data", "distr")
+for(p in packages_needed)
+  if(!require(p)) install.packages(p)
 ```
 
 
